2023-05-15 Albert Chu <chu11@llnl.gov>

	* doc, man: fix a number of typos

	* global: Fix various comment / doc typos.

	* contrib/pet/petalert.pl: Change output error message typo.

2023-05-12 Albert Chu <chu11@llnl.gov>

	* ipmiseld/ipmiseld-ipmi-communication.c (ipmiseld_ipmi_setup),
	ipmiseld/ipmiseld-cache.c (ipmiseld_sdr_cache_create_and_load):
	Set initialized pointers to NULL to avoid double free when
	_ipmiseld_poll() exits.

2022-11-08 Christian Kohn <chris.kohn@amd.com>

	* libfreeipmi, ipmi-fru: Support xilinx OEM fru records.

2022-11-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Fix comment typo.

2022-11-04 Sam James <sam@gentoo.org>

	* configure.ac: Fix various portability to clang.

2022-11-02 Fabrice Fontaine <fontaine.fabrice@gmail.com>

	* configure.ac: support --disable-doc.

2022-10-27 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	Intel M50CYP.

2022-10-26 Mert Kirpici <mert.kirpici@canonical.com>

	* ipmi-sel: accept ISO 8601 for date range options.

2022-10-06 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: fix typo

2022-09-19 Albert Chu <chu11@llnl.gov>

	* configure.ac: Add extra build help.

2022-09-06 Albert Chu <chu11@llnl.gov>

	* common/portability/freeipmi-argp-fmtstream.h: Do not optimize under
	cygwin, fixes portability issues.

2022-02-17 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-sections.c
	(ipmi_config_core_sections_create): Support IPV6 config in
	Lan6_Conf section.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Correct checkout of IPv6 dynamic addresses.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Do
	not output all IPv6 addresses by default, only output them all in
	verbose mode.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c
	(ipv6_static_router_mac_address_checkout): Fix output corner case